--- a/AP/AP.csproj
+++ b/AP/AP.csproj
@@ -49,6 +49,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\AccueilCustomControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\AccueilCustomControl.Designer.cs">
+      <DependentUpon>AccueilCustomControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\HebergementsCustumControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\HebergementsCustumControl.Designer.cs">
+      <DependentUpon>HebergementsCustumControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Home.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Home.Designer.cs">
+      <DependentUpon>Home.cs</DependentUpon>
+    </Compile>
     <Compile Include="modifHebergement.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -57,6 +75,15 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="Forms\AccueilCustomControl.resx">
+      <DependentUpon>AccueilCustomControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\HebergementsCustumControl.resx">
+      <DependentUpon>HebergementsCustumControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Home.resx">
+      <DependentUpon>Home.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="modifHebergement.resx">
       <DependentUpon>modifHebergement.cs</DependentUpon>
     </EmbeddedResource>
