--- a/AP/AP.csproj
+++ b/AP/AP.csproj
@@ -84,11 +84,23 @@
     <Compile Include="Forms\Connexion.Designer.cs">
       <DependentUpon>Connexion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\FormAccueil.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\FormAccueil.Designer.cs">
+      <DependentUpon>FormAccueil.cs</DependentUpon>
+    </Compile>
     <Compile Include="Forms\FormHebergements.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Forms\FormHebergements.Designer.cs">
       <DependentUpon>FormHebergements.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\HebergementInfos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\HebergementInfos.Designer.cs">
+      <DependentUpon>HebergementInfos.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Inscription.cs">
       <SubType>Form</SubType>
@@ -107,6 +119,18 @@
     </Compile>
     <Compile Include="Forms\Home.Designer.cs">
       <DependentUpon>Home.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\Justificatif.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Justificatif.Designer.cs">
+      <DependentUpon>Justificatif.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\PrevisualisationPDF.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\PrevisualisationPDF.Designer.cs">
+      <DependentUpon>PrevisualisationPDF.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Test1.cs">
       <SubType>Form</SubType>
@@ -128,6 +152,7 @@
     </Compile>
     <Compile Include="Model\Hebergement.cs" />
     <Compile Include="Model\Bdd.cs" />
+    <Compile Include="Model\ReservationHebergement.cs" />
     <Compile Include="Model\Utilisateur.cs" />
     <Compile Include="Services\Session.cs" />
     <Compile Include="modifHebergement.cs">
@@ -138,6 +163,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControls\LigneReservationHebergement.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\LigneReservationHebergement.Designer.cs">
+      <DependentUpon>LigneReservationHebergement.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Forms\AccueilCustomControl.resx">
       <DependentUpon>AccueilCustomControl.cs</DependentUpon>
     </EmbeddedResource>
@@ -145,9 +176,15 @@
       <DependentUpon>Connexion.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\FormAccueil.resx">
+      <DependentUpon>FormAccueil.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\FormHebergements.resx">
       <DependentUpon>FormHebergements.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\HebergementInfos.resx">
+      <DependentUpon>HebergementInfos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Inscription.resx">
       <DependentUpon>Inscription.cs</DependentUpon>
@@ -157,6 +194,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Justificatif.resx">
+      <DependentUpon>Justificatif.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\PrevisualisationPDF.resx">
+      <DependentUpon>PrevisualisationPDF.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Test1.resx">
       <DependentUpon>Test1.cs</DependentUpon>
@@ -179,6 +222,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UserControls\LigneReservationHebergement.resx">
+      <DependentUpon>LigneReservationHebergement.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include=".Designer.gitignore" />
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
