--- a/AP/AP.csproj
+++ b/AP/AP.csproj
@@ -178,11 +178,23 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControls\LigneAvis.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\LigneAvis.Designer.cs">
+      <DependentUpon>LigneAvis.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserControls\LigneReservationHebergement.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="UserControls\LigneReservationHebergement.Designer.cs">
       <DependentUpon>LigneReservationHebergement.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Stars.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\Stars.Designer.cs">
+      <DependentUpon>Stars.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="Forms\AccueilCustomControl.resx">
       <DependentUpon>AccueilCustomControl.cs</DependentUpon>
@@ -213,16 +225,14 @@
     <EmbeddedResource Include="Forms\Home.resx">
       <DependentUpon>Home.cs</DependentUpon>
     </EmbeddedResource>
-<<<<<<< HEAD
     <EmbeddedResource Include="Forms\Justificatif.resx">
       <DependentUpon>Justificatif.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\PrevisualisationPDF.resx">
       <DependentUpon>PrevisualisationPDF.cs</DependentUpon>
-=======
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\OptionHebergement.resx">
       <DependentUpon>OptionHebergement.cs</DependentUpon>
->>>>>>> Clément
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Test1.resx">
       <DependentUpon>Test1.cs</DependentUpon>
@@ -245,8 +255,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="UserControls\LigneAvis.resx">
+      <DependentUpon>LigneAvis.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserControls\LigneReservationHebergement.resx">
       <DependentUpon>LigneReservationHebergement.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\Stars.resx">
+      <DependentUpon>Stars.cs</DependentUpon>
     </EmbeddedResource>
     <None Include=".Designer.gitignore" />
     <None Include="packages.config" />
