--- a/AP/AP.csproj
+++ b/AP/AP.csproj
@@ -234,6 +234,9 @@
     <Compile Include="Forms\AjoutHebergement.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\AjouterResponse.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Forms\AjoutHebergement.Designer.cs">
       <DependentUpon>AjoutHebergement.cs</DependentUpon>
     </Compile>
@@ -284,6 +287,9 @@
     <Compile Include="Forms\Justificatif.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Forms\RetourAvis.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
     <Compile Include="Forms\Justificatif.Designer.cs">
       <DependentUpon>Justificatif.cs</DependentUpon>
     </Compile>
@@ -304,6 +310,12 @@
     </Compile>
     <Compile Include="Forms\test2.Designer.cs">
       <DependentUpon>test2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\TextResponse.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\TextResponse.Designer.cs">
+      <DependentUpon>TextResponse.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\UserControl1.cs">
       <SubType>UserControl</SubType>
@@ -370,6 +382,9 @@
     <EmbeddedResource Include="Forms\AjoutHebergement.resx">
       <DependentUpon>AjoutHebergement.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\AjouterResponse.resx">
+      <DependentUpon>AjouterResponse.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\AvisHebergement.resx">
       <DependentUpon>AvisHebergement.cs</DependentUpon>
     </EmbeddedResource>
@@ -402,6 +417,9 @@
     <EmbeddedResource Include="Forms\PrevisualisationPDF.resx">
       <DependentUpon>PrevisualisationPDF.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\RetourAvis.resx">
+      <DependentUpon>RetourAvis.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Forms\OptionHebergement.resx">
       <DependentUpon>OptionHebergement.cs</DependentUpon>
     </EmbeddedResource>
@@ -410,6 +428,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\test2.resx">
       <DependentUpon>test2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\TextResponse.resx">
+      <DependentUpon>TextResponse.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\UserControl1.resx">
       <DependentUpon>UserControl1.cs</DependentUpon>
