--- a/AP/AP.csproj
+++ b/AP/AP.csproj
@@ -231,27 +231,16 @@
     <Compile Include="Forms\AccueilCustomControl.Designer.cs">
       <DependentUpon>AccueilCustomControl.cs</DependentUpon>
     </Compile>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-    <Compile Include="Forms\AjouterResponse.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <Compile Include="Forms\AjouterResponse.cs" />
     <Compile Include="Forms\AjouterResponse.Designer.cs">
       <DependentUpon>AjouterResponse.cs</DependentUpon>
     </Compile>
->>>>>>> new_main
-=======
     <Compile Include="Forms\AjoutHebergement.cs">
       <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Forms\AjouterResponse.cs">
-      <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Forms\AjoutHebergement.Designer.cs">
       <DependentUpon>AjoutHebergement.cs</DependentUpon>
     </Compile>
->>>>>>> RemySecondDuNom
     <Compile Include="Forms\Connexion.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -296,9 +285,6 @@
     <Compile Include="Forms\Home.Designer.cs">
       <DependentUpon>Home.cs</DependentUpon>
     </Compile>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
     <Compile Include="Forms\RetourAvis.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -311,8 +297,6 @@
     <Compile Include="Forms\SupprimerResponse.Designer.cs">
       <DependentUpon>SupprimerResponse.cs</DependentUpon>
     </Compile>
->>>>>>> new_main
-=======
     <Compile Include="Forms\Justificatif.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -328,7 +312,6 @@
     <Compile Include="Forms\PrevisualisationPDF.Designer.cs">
       <DependentUpon>PrevisualisationPDF.cs</DependentUpon>
     </Compile>
->>>>>>> RemySecondDuNom
     <Compile Include="Forms\Test1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -341,21 +324,12 @@
     <Compile Include="Forms\test2.Designer.cs">
       <DependentUpon>test2.cs</DependentUpon>
     </Compile>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
-=======
->>>>>>> RemySecondDuNom
     <Compile Include="Forms\TextResponse.cs">
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Forms\TextResponse.Designer.cs">
       <DependentUpon>TextResponse.cs</DependentUpon>
     </Compile>
-<<<<<<< HEAD
->>>>>>> new_main
-=======
->>>>>>> RemySecondDuNom
     <Compile Include="Forms\UserControl1.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -425,21 +399,15 @@
     <EmbeddedResource Include="Forms\AccueilCustomControl.resx">
       <DependentUpon>AccueilCustomControl.cs</DependentUpon>
     </EmbeddedResource>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
     <EmbeddedResource Include="Forms\AjouterResponse.resx">
       <DependentUpon>AjouterResponse.cs</DependentUpon>
     </EmbeddedResource>
->>>>>>> new_main
-=======
     <EmbeddedResource Include="Forms\AjoutHebergement.resx">
       <DependentUpon>AjoutHebergement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\AjouterResponse.resx">
       <DependentUpon>AjouterResponse.cs</DependentUpon>
     </EmbeddedResource>
->>>>>>> RemySecondDuNom
     <EmbeddedResource Include="Forms\AvisHebergement.resx">
       <DependentUpon>AvisHebergement.cs</DependentUpon>
     </EmbeddedResource>
@@ -481,33 +449,24 @@
     <EmbeddedResource Include="Forms\ResponseHebergement.resx">
       <DependentUpon>ResponseHebergement.cs</DependentUpon>
     </EmbeddedResource>
-<<<<<<< HEAD
-=======
     <EmbeddedResource Include="Forms\RetourAvis.resx">
       <DependentUpon>RetourAvis.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\SupprimerResponse.resx">
       <DependentUpon>SupprimerResponse.cs</DependentUpon>
     </EmbeddedResource>
->>>>>>> new_main
     <EmbeddedResource Include="Forms\Test1.resx">
       <DependentUpon>Test1.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\test2.resx">
       <DependentUpon>test2.cs</DependentUpon>
     </EmbeddedResource>
-<<<<<<< HEAD
-<<<<<<< HEAD
-=======
     <EmbeddedResource Include="Forms\TextResponse.resx">
       <DependentUpon>TextResponse.cs</DependentUpon>
     </EmbeddedResource>
->>>>>>> new_main
-=======
     <EmbeddedResource Include="Forms\TextResponse.resx">
       <DependentUpon>TextResponse.cs</DependentUpon>
     </EmbeddedResource>
->>>>>>> RemySecondDuNom
     <EmbeddedResource Include="Forms\UserControl1.resx">
       <DependentUpon>UserControl1.cs</DependentUpon>
     </EmbeddedResource>
