--- a/AP/AP.csproj
+++ b/AP/AP.csproj
@@ -304,11 +304,11 @@
     <Compile Include="Forms\Test1.Designer.cs">
       <DependentUpon>Test1.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\test2.cs">
+    <Compile Include="Forms\Options.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\test2.Designer.cs">
-      <DependentUpon>test2.cs</DependentUpon>
+    <Compile Include="Forms\Options.Designer.cs">
+      <DependentUpon>Options.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\UserControl1.cs">
       <SubType>UserControl</SubType>
@@ -413,8 +413,8 @@
     <EmbeddedResource Include="Forms\Test1.resx">
       <DependentUpon>Test1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\test2.resx">
-      <DependentUpon>test2.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\Options.resx">
+      <DependentUpon>Options.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\UserControl1.resx">
       <DependentUpon>UserControl1.cs</DependentUpon>
