--- a/AP/AP.csproj
+++ b/AP/AP.csproj
@@ -44,6 +44,9 @@
     <Reference Include="CircularProgressBar, Version=2.8.0.16, Culture=neutral, PublicKeyToken=310fd07b25df79b3, processorArchitecture=MSIL">
       <HintPath>..\packages\CircularProgressBar.2.8.0.16\lib\net40\CircularProgressBar.dll</HintPath>
     </Reference>
+    <Reference Include="FontAwesome.Sharp, Version=5.15.4.0, Culture=neutral, PublicKeyToken=d16d1e4e568ec10f, processorArchitecture=MSIL">
+      <HintPath>..\packages\FontAwesome.Sharp.5.15.4\lib\net472\FontAwesome.Sharp.dll</HintPath>
+    </Reference>
     <Reference Include="itext.barcodes, Version=7.2.0.0, Culture=neutral, PublicKeyToken=8354ae6d2174ddca, processorArchitecture=MSIL">
       <HintPath>..\packages\itext7.7.2.0\lib\net461\itext.barcodes.dll</HintPath>
     </Reference>
@@ -173,6 +176,8 @@
     <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <HintPath>..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="PresentationCore" />
+    <Reference Include="PresentationFramework" />
     <Reference Include="System" />
     <Reference Include="System.Buffers, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Buffers.4.5.1\lib\net461\System.Buffers.dll</HintPath>
@@ -217,6 +222,7 @@
       <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net47\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="System.Windows.Forms.DataVisualization" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -226,6 +232,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
     <Reference Include="WinFormAnimation, Version=1.6.0.4, Culture=neutral, PublicKeyToken=310fd07b25df79b3, processorArchitecture=MSIL">
       <HintPath>..\packages\WinFormAnimation.1.6.0.4\lib\net40\WinFormAnimation.dll</HintPath>
     </Reference>
@@ -237,12 +244,6 @@
     <Compile Include="dtos\ApiCoordonneesPropertiesDto.cs" />
     <Compile Include="dtos\ApiCoordonneesRootDto.cs" />
     <Compile Include="dtos\ApiRegionDto.cs" />
-    <Compile Include="Forms\AccueilCustomControl.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Forms\AccueilCustomControl.Designer.cs">
-      <DependentUpon>AccueilCustomControl.cs</DependentUpon>
-    </Compile>
     <Compile Include="Forms\AjoutHebergement.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -293,6 +294,7 @@
     </Compile>
     <Compile Include="Model\AdminValidHebergement.cs" />
     <Compile Include="Services\ApiGouvCommunes.cs" />
+    <Compile Include="Services\ComboboxItem.cs" />
     <Compile Include="Services\GeneratePDF.cs" />
     <Compile Include="UserControls\HebergementsCustumControl.cs">
       <SubType>UserControl</SubType>
@@ -305,12 +307,6 @@
     </Compile>
     <Compile Include="Forms\Home.Designer.cs">
       <DependentUpon>Home.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Forms\SupprimerResponse.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Forms\SupprimerResponse.Designer.cs">
-      <DependentUpon>SupprimerResponse.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Justificatif.cs">
       <SubType>Form</SubType>
@@ -358,11 +354,11 @@
     <Compile Include="Model\ReservationHebergement.cs" />
     <Compile Include="Model\Utilisateur.cs" />
     <Compile Include="Services\Session.cs" />
-    <Compile Include="Forms\modifHebergement.cs">
+    <Compile Include="Forms\ModifHebergement.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Forms\modifHebergement.Designer.cs">
-      <DependentUpon>modifHebergement.cs</DependentUpon>
+    <Compile Include="Forms\ModifHebergement.Designer.cs">
+      <DependentUpon>ModifHebergement.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -390,9 +386,6 @@
     <Compile Include="UserControls\Stars.Designer.cs">
       <DependentUpon>Stars.cs</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="Forms\AccueilCustomControl.resx">
-      <DependentUpon>AccueilCustomControl.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\AjoutHebergement.resx">
       <DependentUpon>AjoutHebergement.cs</DependentUpon>
     </EmbeddedResource>
@@ -440,14 +433,11 @@
     <EmbeddedResource Include="Forms\ResponseHebergement.resx">
       <DependentUpon>ResponseHebergement.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\SupprimerResponse.resx">
-      <DependentUpon>SupprimerResponse.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Forms\Options.resx">
       <DependentUpon>Options.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\modifHebergement.resx">
-      <DependentUpon>modifHebergement.cs</DependentUpon>
+    <EmbeddedResource Include="Forms\ModifHebergement.resx">
+      <DependentUpon>ModifHebergement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
