--- a/AP/packages.config
+++ b/AP/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="BCrypt.Net-Next" version="4.0.2" targetFramework="net472" />
   <package id="CircularProgressBar" version="2.8.0.16" targetFramework="net472" />
+  <package id="FontAwesome.Sharp" version="5.15.4" targetFramework="net472" />
   <package id="itext7" version="7.2.0" targetFramework="net472" />
   <package id="itext7.commons" version="7.2.0" targetFramework="net472" />
   <package id="Microsoft.AspNetCore.Authentication.Abstractions" version="2.2.0" targetFramework="net472" />
