--- a/AP/AP.csproj
+++ b/AP/AP.csproj
@@ -256,10 +256,10 @@
     <Compile Include="Forms\Connexion.Designer.cs">
       <DependentUpon>Connexion.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ControlResponse.cs">
+    <Compile Include="UserControls\ControlResponse.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Forms\ControlResponse.Designer.cs">
+    <Compile Include="UserControls\ControlResponse.Designer.cs">
       <DependentUpon>ControlResponse.cs</DependentUpon>
     </Compile>
     <Compile Include="Forms\Conseils.cs">
@@ -294,7 +294,7 @@
     </Compile>
     <Compile Include="Model\AdminValidHebergement.cs" />
     <Compile Include="Services\ApiGouvCommunes.cs" />
-    <Compile Include="Services\ComboboxItem.cs" />
+    <Compile Include="dtos\ComboboxItemDto.cs" />
     <Compile Include="Services\GeneratePDF.cs" />
     <Compile Include="UserControls\HebergementsCustumControl.cs">
       <SubType>UserControl</SubType>
@@ -326,22 +326,22 @@
     <Compile Include="Forms\Options.Designer.cs">
       <DependentUpon>Options.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\OptionHebergement.cs">
+    <Compile Include="UserControls\OptionHebergement.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Forms\OptionHebergement.Designer.cs">
+    <Compile Include="UserControls\OptionHebergement.Designer.cs">
       <DependentUpon>OptionHebergement.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\AvisHebergement.cs">
+    <Compile Include="UserControls\AvisHebergement.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Forms\AvisHebergement.Designer.cs">
+    <Compile Include="UserControls\AvisHebergement.Designer.cs">
       <DependentUpon>AvisHebergement.cs</DependentUpon>
     </Compile>
-    <Compile Include="Forms\ResponseHebergement.cs">
+    <Compile Include="UserControls\ResponseHebergement.cs">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="Forms\ResponseHebergement.Designer.cs">
+    <Compile Include="UserControls\ResponseHebergement.Designer.cs">
       <DependentUpon>ResponseHebergement.cs</DependentUpon>
     </Compile>
     <Compile Include="Model\Response.cs" />
@@ -353,7 +353,6 @@
     <Compile Include="Model\Ville.cs" />
     <Compile Include="Model\ReservationHebergement.cs" />
     <Compile Include="Model\Utilisateur.cs" />
-    <Compile Include="Services\Session.cs" />
     <Compile Include="Forms\ModifHebergement.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -389,14 +388,14 @@
     <EmbeddedResource Include="Forms\AjoutHebergement.resx">
       <DependentUpon>AjoutHebergement.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\AvisHebergement.resx">
+    <EmbeddedResource Include="UserControls\AvisHebergement.resx">
       <DependentUpon>AvisHebergement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Connexion.resx">
       <DependentUpon>Connexion.cs</DependentUpon>
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ControlResponse.resx">
+    <EmbeddedResource Include="UserControls\ControlResponse.resx">
       <DependentUpon>ControlResponse.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Conseils.resx">
@@ -427,10 +426,10 @@
     <EmbeddedResource Include="Forms\PrevisualisationPDF.resx">
       <DependentUpon>PrevisualisationPDF.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\OptionHebergement.resx">
+    <EmbeddedResource Include="UserControls\OptionHebergement.resx">
       <DependentUpon>OptionHebergement.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Forms\ResponseHebergement.resx">
+    <EmbeddedResource Include="UserControls\ResponseHebergement.resx">
       <DependentUpon>ResponseHebergement.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Options.resx">
